--- a/healthcare/index.html
+++ b/healthcare/index.html
@@ -167,8 +167,8 @@ legend.append("text")
   .style("text-anchor", "start")
   .text(function(d, i) { 
     switch (i) {
-      case 0: return "% With Healthcare";
-      case 1: return "% Without Healthcare";
+      case 0: return "With Healthcare";
+      case 1: return "Without Healthcare";
     }
   });
 
