--- a/florida/index.html
+++ b/florida/index.html
@@ -1,8 +1,5 @@
 <html>
 <body>
-
-
-<iframe src="https://www.google.com/maps/place/Davie,+FL/@26.0725217,-80.3103017,12.82z/data=!4m5!3m4!1s0x88d9a7e20aa07b1d:0xe7b2c8ac6892b1fc!8m2!3d26.0764783!4d-80.2521157" width="5000" height="3500" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d54624.05566094344!2d-80.28077799880273!3d26.071628881330998!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9a7e20aa07b1d%3A0xe7b2c8ac6892b1fc!2sDavie%2C+FL!5e0!3m2!1sen!2sus!4v1478465734711" width="5000" height="3500" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
